@startuml
title 17. UML - Factory Method trong Payment

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 12
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  FontSize 14
  FontStyle bold
}

class CartController {
}

class PaymentMethodFactory <<Factory>> {
}

class VnPayPaymentMethod <<Product>> {
}

class MomoPaymentMethod <<Product>> {
}

class CodPaymentMethod <<Product>> {
}

CartController --> PaymentMethodFactory
PaymentMethodFactory --> VnPayPaymentMethod
PaymentMethodFactory --> MomoPaymentMethod
PaymentMethodFactory --> CodPaymentMethod

@enduml
